--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -6,3 +6,7 @@
 @import "base";
 @import "layout";
 @import "buttons";
+@import "projects";
+@import "publications";
+@import "cv";
+@import "details";
