CV done + audio

--- a/_sass/_cv.scss
+++ b/_sass/_cv.scss
@@ -350,7 +350,7 @@
     
     &:hover {
       background: rgba(79, 70, 229, 0.1);
-      color: #79, 70, 229;
+      color: rgb(79, 70, 229);
     }
   }
 
